# symb-rs

./: .gitignore  Cargo.toml  pyproject.toml  readme.md  test.py
expr/: Cargo.toml
expr/src/: lib.rs  rule.rs
expr/src/expression/: action.rs  literals.rs  mod.rs  parser.rs  predicates.rs
expr/src/expression/action/: constant.rs  function.rs  map.rs  mod.rs  number.rs  predicate.rs
expr/src/rule/: mod.rs
expr_macro/: Cargo.toml
expr_macro/src/: lib.rs
src/: cli.rs  lib.rs  main.rs  rules.rs
src/expression/: action.rs  literals.rs  mod.rs  parser.rs
src/rewrite/: bfsrewriter.rs  mod.rs  simple.rs
symb_rs_core/: Cargo.toml
symb_rs_core/src/: lib.rs  rules.rs
symb_rs_core/src/rewrite/: mod.rs  simple.rs
