[package]
name = "symb-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "symb"
path = "src/lib.rs"

[[bin]]
name = "cli"
path = "src/cli.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
expr = { path = "expr"}
expr_macro = { path = "expr_macro"}
once_cell = "1.19.0"
