[package]
name = "symb-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "symb_rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "cli"
path = "src/cli.rs"

[dependencies]
expr = { path = "expr"}
expr_macro = { path = "expr_macro"}
once_cell = "1.19.0"
pyo3 = "0.19.0"

[features]
python = ["pyo3/extension-module"]