[package]
name = "symb-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "symb_rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "cli"
path = "src/cli.rs"

[dependencies]
pyo3 = "0.20.2"
symb_rs_core = { path = "symb_rs_core" }

[features]
python = ["pyo3/extension-module"]