[package]
name = "symb_rs_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "symb_rs_core"
path = "src/lib.rs"

[dependencies]
expr = { path = "../expr" }
expr_macro = { path = "../expr_macro" }
once_cell = "1.19.0"
